# jenkinsexample

./: CMakeLists.txt  Jenkinsfile
test/: CMakeLists.txt  catch.hpp
